src/flask_k8s/k8s_deployment.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: hello-python-service
# spec:
#   selector:
#     app: hello-python
#   ports:
#   - protocol: "TCP"
#     port: 6000
#     targetPort: 8080
#   type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python
spec:
  selector:
    matchLabels:
      app: hello-python
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      containers:
      - name: hello-python
        image: k8s.io/hello-python:1.0.0
        ports:
        - containerPort: 8080
