src/flask_k8s/k8s_service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: flask-api-service
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 80
#     targetPort: 5000
#   selector:
#     app: flask-api
---
apiVersion: v1
kind: Service
metadata:
  name: hello-python-service
spec:
  selector:
    app: hello-python
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: LoadBalancer
