src/flask_k8s/k8s_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-python
spec:
  rules:
    - host: hello-python.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-python-service
                port:
                  number: 8080
  tls:
    - hosts:
        - hello-python.localhost
